banner responsive done

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               >Nova Paribahan</span
             >
           </h1>
-          <p class="font-inter font-normal text-lg max-w-[700px]">
+          <p class="font-inter hidden lg:block font-normal text-lg max-w-[700px]">
             Embark on a Journey with Nova-Travel: Discover Unforgettable
             Adventures, Immerse in Exotic Cultures, and Create Timeless
             Memories. Your Passport to Extraordinary Experiences Awaits!
