success page responsive done

--- a/success.html
+++ b/success.html
@@ -29,14 +29,15 @@
     </style>
 </head>
 <body class="bg-black h-screen w-screen flex flex-col justify-center items-center">
-    <div class="flex flex-col items-center justify-center bg-[#F2F1F1] w-[1140px] h-[700px] rounded-3xl">
-        <div class="flex flex-col items-center justify-center gap-5 bg-white w-[60%] h-[400px] min-w-[500px]  p-10">
+    <div class="flex flex-col items-center justify-center bg-[#F2F1F1] h-[90%] w-[90%] rounded-3xl">
+        <div class="flex flex-col items-center justify-center gap-5 bg-white h-[80%] w-[60%] p-10">
              <img src="./images/success.png" alt="">
-             <h2 class="uppercase font-bold text-2xl text-[#27AE60]">Success</h2>
-             <p class="font-medium text-center text-xl text-[#4A4A4A]">Thank you for Booking Our Bus Seats. We are working hard to find the best service and deals for you. <br> <span class="font-light">Shortly you will find a confirmation in your email.</span></p>
+             <h2 class="uppercase font-bold text-sm lg:text-2xl text-[#27AE60]">Success</h2>
+             <p class="font-medium text-center text-xs lg:text-xl text-[#4A4A4A]">Thank you for Booking Our Bus Seats. We are working hard to find the best service and deals for you. <br> <span class="font-light">Shortly you will find a confirmation in your email.</span></p>
              <button id="btn-continue" class="btn bg-[#27AE60] px-10">Continue</button>
         </div>
     </div>
     <script src="./scripts/success.js"></script>
 </body>
 </html>
+
